Fix swatches getting cut off

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -92,10 +92,6 @@ body {
 }
 
 @media only screen and (min-width: 769px) {
-  #customBarSectionMain {
-    display: flex;
-  }
-
   #content {
     padding-bottom: 2em;
   }
@@ -234,7 +230,7 @@ input[type="text"].letters-input {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 20%;
+  padding-top: 2em;
   background-color: white;
   z-index: 1;
   transition: transform 200ms;
